--- a/committees.html
+++ b/committees.html
@@ -94,7 +94,9 @@
 						<li >
 							<a href="leadership.html">LEADERSHIP 2014-2015</a>
 						</li>
-						
+						<li>
+							<a href="history.html">DMUN HISTORY</a>
+						</li>
 					</ul>
 				</div>
 				
