--- a/about.html
+++ b/about.html
@@ -45,10 +45,8 @@
 </div>
 <br><br><br>
 
-<div class="container">
-	<div class="row clearfix">
-		<div class="col-md-26 column">
-			<nav class="navbar navbar-inverse" role="navigation">
+<div class="navbar"> <!-- navbar start -->
+  	<nav class="navbar navbar-inverse navbar-static" role="navigation">
 				<div class="navbar-header">
 					 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button> <a class="navbar-brand" href="index.html">DMUN III</a>
 				</div>
@@ -56,7 +54,7 @@
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav">
 						<li class="active">
-							<a href="#">ABOUT US</a>
+							<a href="about.html">ABOUT US</a>
 						</li>
 						<li>
 							<a href="register.html">REGISTER</a>
@@ -94,17 +92,14 @@
 						<li>
 							<a href="leadership.html">LEADERSHIP 2014-2015</a>
 						</li>
-						
+						<li>
+							<a href="history.html">DMUN HISTORY</a>
+						</li>
 					</ul>
-				</div>
-				
-			</nav>
-			
-			</div>
-		</div>
-	</div>
-	<br> 
-</div>
+			</div>			
+	</nav>
+</div> <!-- navbar end -->
+
 	<center>
 	<img src="img/dalton/dmun1.jpg" alt="some text" width=480 HEIGHT=333>
 	<br><br> 
