new fonts, history

--- a/history.html
+++ b/history.html
@@ -36,14 +36,14 @@
 
 <body>
 
-<div id="topbar"><!-- top start -->
+<div id="topbar">
     <i>
     	<font size="2">
     		The Dalton School - 108 E 89th St - New York, NY, 10128 - <a href="mailto:dg@daltonmun.org"> dg@daltonmun.org</a>
     	</font>
     </i>
 </div>
-<br><br><br><!-- top end -->
+<br><br><br>
 
 <div class="navbar"> <!-- navbar start -->
 <div class="navbar-default"> <!-- navbar start -->
@@ -89,10 +89,10 @@
 					</ul>
 					
 					<ul class="nav navbar-nav navbar-right">
-						<li class="active">
+						<li>
 							<a href="leadership.html">LEADERSHIP 2014-2015</a>
 						</li>
-						<li>
+						<li class="active">
 							<a href="history.html">DMUN HISTORY</a>
 						</li>
 					</ul>
@@ -100,59 +100,10 @@
 	</nav>
 </div> <!-- navbar end -->
 
-<center>
-	<br> 
-	<img src="img/dalton/dmun4.jpg" alt="some text" width=480 HEIGHT=333>
-	<br><br> 
-</center>
-
-
 <div class="container"> 
-	<div class="col-xs-3"></div>
-	<div class="col-xs-6">
-	<center>
-	<i> 
-		<b>Secretaries-General</b>
-	</i>
-	<br><br>
-		Philip Clark and Andrew Milich
-	<br><br>
-	<i>
-		<b>Senior Executive Board</b>
-	</i>
-	<br><br>
-		Sunaina Danziger (Director of Operations and Research)<br> 
-		Beatrice Edmonds (Director General)<br>
-		Calder McHugh (Director of Delegate Management) <br>
-		Jordan Singer (Director General)
-	<br><br>
-	<i> 
-		<b>Under Secretaries-General</b>
-	</i>
-	<br><br>
-		Angie Cui <br> 
-		Wolf Hertzberg <br> 
-		Audrey McDermott <br> 
-		Devin Plumb <br> 
-		Hannah State 
-	<br><br>
-	<i>
-		<b>Director of Alumni Relations</b>
-	</i>
-	<br><br>
-		Samuel Stone
-	<br><br>
-	<i>
-		<b>Website Director</b>
-	</i>
-	<br><br>
-		Andrew Milich
-	<br><br>
-	</center>
-	</div>
-	<div class="col-xs-3"></div>
+	
 </div> <!-- container end -->
-<div class="row clearfix"><!-- © start -->
+<div class="row clearfix">
 		<div class="row clearfix">
 		<center>
 			<font size="2">
@@ -160,6 +111,6 @@
 			</font>
 		</center>
 	</div>
-</div><!-- © end -->
+	</div>
 </body>
 </html>
