--- a/about.html
+++ b/about.html
@@ -46,13 +46,13 @@
 <br><br><br>
 
 <div class="navbar"> <!-- navbar start -->
-  	<nav class="navbar navbar-inverse navbar-static" role="navigation">
-				<div class="navbar-header">
-					 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button> <a class="navbar-brand" href="index.html">DMUN III</a>
-				</div>
+	<div class="navbar-default"> <!-- navbar start -->
 				
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav">
+						<li>
+							<a href="index.html">DMUN III</a>
+						</li>
 						<li class="active">
 							<a href="about.html">ABOUT US</a>
 						</li>
