--- a/index.html
+++ b/index.html
@@ -45,16 +45,15 @@
     </i>
 </div>
 <br><br><br>
-
-<div class="navbar"> <!-- navbar start -->
-  	<nav class="navbar navbar-inverse navbar-static" role="navigation">
-				<div class="navbar-header">
-					 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button> <a class="navbar-brand" href="index.html">DMUN III</a>
-				</div>
+<div class="navbar-default"> <!-- navbar start -->
+  	<nav class="navbar" role="navigation">
 				
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav">
-						<li class="active">
+						<li>
+							<a href="index.html">DMUN III</a>
+						</li>
+						<li>
 							<a href="about.html">ABOUT US</a>
 						</li>
 						<li>
@@ -152,9 +151,9 @@
 		<div class="col-xs-2">
 			<left>
 			
-				<font size="5">
+				<font size="4">
 					<b>
-						Welcome to DMUN 2015!
+						WELCOME TO DMUN 2015!
 					<br>
 					<br> 
 						<a href="register">Register now!</a>
@@ -187,16 +186,44 @@
 			</i>
 			</left>
 		</div>
-		<div class="col-xs-1">
-		</div>
-		<div class="col-xs-2">
-			<center>
-			<iframe width="350" height="240" src="https://w2.countingdownto.com/676806" frameborder="0"></iframe><p>
-			</center>
+		<div class="col-xs-3">
+			&nbsp&nbsp&nbsp&nbsp&nbsp Countdown to DMUN! 
+			<iframe width="320" height="160" src="https://w2.countingdownto.com/676806" frameborder="no" scrolling="no" border="0" style="-webkit-transform:scale(0.9);"></iframe>
+			<!--<iframe width="100" height="100" src="https://w2.countingdownto.com/676806" frameborder="0"></iframe><p> -->
 		</div>
 	</div>
 </div> <!-- container end -->
-	<div class="row clearfix">
+
+<div class="mycontainer"> 
+	<font color="FFFFFF">
+		<br><br>
+			<div class="col-xs-1">
+			</div>
+			<div class="col-xs-7">
+				<b>Latest News: </b>
+				<ul>
+  					<li><i>November 3rd: </i>Committee Topics Posted! </li>
+  					<li><i>November 4th: </i>Registration is Open! </li>
+				</ul>
+			</div>
+			<div class="col-xs-3">
+				<br>
+				<button type="button" class="btn btn-default btn-lg">Register Now</button>
+			</div>
+		<br><br>
+		<br><br>
+	<br><br>
+	</font>
+</div> <!-- container end -->
+<br>
+
+<div id="footer_wrapper"> 
+	<div id="footer_box">
+	i am the footer
+	</div>
+</div>
+
+<div class="row clearfix">
 		<center>
 			<font size="2">
 			© 2015 DMUN 
