--- a/information.html
+++ b/information.html
@@ -46,14 +46,13 @@
 <br><br><br>
 
 <div class="navbar"> <!-- navbar start -->
-  	<nav class="navbar navbar-inverse navbar-static" role="navigation">
-				<div class="navbar-header">
-					 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button> <a class="navbar-brand" href="index.html">DMUN III</a>
-				</div>
-				
+	<div class="navbar-default"> <!-- navbar start -->
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav">
-						<li class="active">
+						<li>
+							<a href="index.html">DMUN III</a>
+						</li>
+						<li>
 							<a href="about.html">ABOUT US</a>
 						</li>
 						<li>
@@ -83,7 +82,7 @@
 								</li>
 							</ul>
 						</li>
-						<li>
+						<li class="active">
 							<a href="information.html">INFORMATION</a>
 						</li>
 					</ul>
@@ -99,6 +98,7 @@
 			</div>			
 	</nav>
 </div> <!-- navbar end -->
+<br><br>
 <div class="container"> 
 	<div class="row clearfix">
 				<div class="col-md-7 column">
