--- a/register.html
+++ b/register.html
@@ -46,17 +46,18 @@
 <br><br><br>
 
 <div class="navbar"> <!-- navbar start -->
-  	<nav class="navbar navbar-inverse navbar-static" role="navigation">
-				<div class="navbar-header">
-					 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button> <a class="navbar-brand" href="index.html">DMUN III</a>
-				</div>
+<div class="navbar-default"> <!-- navbar start -->
+				
 				
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav">
-						<li class="active">
-							<a href="about.html">ABOUT US</a>
+						<li>
+							<a href="index.html">DMUN III</a>
 						</li>
 						<li>
+							<a href="about.html">ABOUT US</a>
+						</li>
+						<li class="active">
 							<a href="register.html">REGISTER</a>
 						</li>
 						<li class="dropdown">
@@ -103,10 +104,12 @@
 <div class="container"> 
 	<!-- register stuff -->
 	<center>
-	Registration forms will be available soon. 
+	<iframe src="https://docs.google.com/forms/d/1QMMEMqpRelhMULY2f54P1_4WQXFH9xF3u61c00xUs00/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 	<br><br>
 	</center>
 	Please contact <a href="mailto:dg@daltonmun.org"> dg@daltonmun.org</a> or <a href="mailto:sg@daltonmun.org"> sg@daltonmun.org</a> with any inquiries or concerns. 
+	<br>
+	<br>
 </div> <!-- container end -->
 <div class="row clearfix">
 		<div class="row clearfix">
