changed top bar

--- a/index.html
+++ b/index.html
@@ -219,8 +219,15 @@
 
 <div id="footer_wrapper"> 
 	<div id="footer_box">
-	i am the footer
+	<center>
+	<i>
+	CONTACT THE SECRETARIAT
+	<br><br>
+	We always want your feedback with questions or concerns about DMUN. For all registration inquiries, please contact our Director-General: <a href="mailto:dg@daltonmun.org"> dg@daltonmun.org</a>
+	</i>
+	</center>
 	</div>
+	<br><br><br><br><br>
 </div>
 
 <div class="row clearfix">
