--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 	<i>
 	CONTACT THE SECRETARIAT
 	<br><br>
-	We always want your feedback with questions or concerns about DMUN. For all registration inquiries, please contact our Director-General: <a href="mailto:dg@daltonmun.org"> dg@daltonmun.org</a>
+	We always want your feedback with questions or concerns about DMUN. For all registration inquiries, please contact our Director-General: <a href="mailto:dg@daltonmun.org"> dg@daltonmun.org</a>. 
 	</i>
 	</center>
 	</div>
