new drop down, information

--- a/information.html
+++ b/information.html
@@ -32,7 +32,7 @@
 	<script type="text/javascript" src="js/scripts.js"></script>
 </head>
 
-<font FACE="tahoma"> 
+<font FACE="palatino"> 
 
 <body>
 
@@ -61,26 +61,67 @@
 						<li class="dropdown">
 							<a href="committees.html" class="dropdown-toggle" data-toggle="dropdown">COMMITTEES<strong class="caret"></strong></a>
 							<ul class="dropdown-menu">
-								<li>
-									<a href="committees.html">Committees</a>
-								</li>
-								<li class="divider">
-								</li>
-								<li>
-									<a href="#">DISEC</a>
-								</li>
-								<li>
-									<a href="#">SPECPOL</a>
-								</li>
-								<li>
-									<a href="#">SOCHUM</a>
-								</li>
-								<li class="divider">
-								</li>
-								<li>
-									<a href="#">Suggest a committee!</a>
-								</li>
-							</ul>
+									<li>
+										<a href="committees.html">Committees</a>
+									</li>
+									<li class="divider">
+									</li>
+									<li>
+										<center>
+											<font size="1">
+											GENERAL ASSEMBLIES
+											</font>
+										</center>
+									</li>
+									<br>
+									<li>
+										<a href="disec.html">DISEC</a>
+									</li>
+									<li>
+										<a href="specpol.html">SPECPOL</a>
+									</li>
+									<li>
+										<a href="sochum.html">SOCHUM</a>
+									</li>
+									<li class="divider">
+									</li>
+									<li>
+										<center>
+											<font size="1">
+											ECONOMIC AND SOCIAL COUNCILS
+											</font>
+										</center>
+									</li>
+									<li>
+										<a href="ecosoc1.html">WHO (2020)</a>
+									</li>
+									<li>
+										<a href="ecosoc2.html">UNODC</a>
+									</li>
+									<li class="divider">
+									</li>
+									<li>
+										<center>
+											<font size="1">
+											CRISIS COMMITTEES
+											</font>
+										</center>
+									</li>
+									<li>
+										<a href="crisis1.html">Crisis 1</a>
+									</li>
+									<li>
+										<a href="jcc1.html">Lucchese Family</a>
+									</li>
+									<li>
+										<a href="jcc2.html">Gambino Family</a>
+									</li>
+									<li class="divider">
+									</li>
+									<li>
+										<a href="#">Suggest a committee!</a>
+									</li>
+								</ul>
 						</li>
 						<li class="active">
 							<a href="information.html">INFORMATION</a>
@@ -102,9 +143,18 @@
 <div class="container"> 
 	<div class="row clearfix">
 				<div class="col-md-7 column">
-					<iframe src="https://mapsengine.google.com/map/u/0/embed?mid=zfShBU0HJf9U.k5Y568ViI0cI" width="550" height="480"></iframe>
+					<iframe src="https://mapsengine.google.com/map/u/0/embed?mid=zfShBU0HJf9U.k5Y568ViI0cI" width="650" height="480"></iframe>
 				</div>
-				<div class="col-md-5 column">
+				<center>Directions: </center>
+				<br>
+				<form action="http://maps.google.com/maps" method="get" target="_blank">
+   					<label for="saddr">Enter your location</label>
+   					<input type="text" name="saddr" />
+   					<input type="hidden" name="daddr" value="108 E 89th St" />
+   					<input type="submit" value="Get directions" />
+				</form>
+				<br>
+				<!--<div class="col-md-5 column">
 					<div class="panel panel-primary">
 				<div class="panel-heading">
 					<h3 class="panel-title">
@@ -145,13 +195,14 @@
 				</div>
 			</div>
 				</div>
-			</div>
+			</div>-->
 
 </div> <!-- container end -->
 <div class="row clearfix">
 		<div class="row clearfix">
 		<center>
 			<font size="2">
+			<br>
 			© 2015 DMUN 
 			</font>
 		</center>
