--- a/committees.html
+++ b/committees.html
@@ -32,7 +32,7 @@
 	<script type="text/javascript" src="js/scripts.js"></script>
 </head>
 
-<font FACE="tahoma"> 
+<font FACE="palatino"> 
 
 <body>
 
@@ -47,8 +47,6 @@
 
 <div class="navbar"> <!-- navbar start -->
 	<div class="navbar-default"> <!-- navbar start -->
-				
-				
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav">
 						<li>
@@ -61,28 +59,71 @@
 							<a href="register.html">REGISTER</a>
 						</li>
 						<li class="dropdown">
-							<a href="committees.html" class="dropdown-toggle" data-toggle="dropdown">COMMITTEES<strong class="caret"></strong></a>
-							<ul class="dropdown-menu">
-								<li class="active">
-									<a href="committees.html">Committees</a>
-								</li>
-								<li class="divider">
-								</li>
-								<li>
-									<a href="#">DISEC</a>
-								</li>
-								<li>
-									<a href="#">SPECPOL</a>
-								</li>
-								<li>
-									<a href="#">SOCHUM</a>
-								</li>
-								<li class="divider">
-								</li>
-								<li>
-									<a href="#">Suggest a committee!</a>
-								</li>
-							</ul>
+							<li class="active">
+								<a href="committees.html" class="dropdown-toggle" data-toggle="dropdown">COMMITTEES<strong class="caret"></strong></a>
+								<ul class="dropdown-menu">
+									<li class="active">
+										<a href="committees.html">Committees</a>
+									</li>
+									<li class="divider">
+									</li>
+									<li>
+										<center>
+											<font size="1">
+											GENERAL ASSEMBLIES
+											</font>
+										</center>
+									</li>
+									<br>
+									<li>
+										<a href="disec.html">DISEC</a>
+									</li>
+									<li>
+										<a href="specpol.html">SPECPOL</a>
+									</li>
+									<li>
+										<a href="sochum.html">SOCHUM</a>
+									</li>
+									<li class="divider">
+									</li>
+									<li>
+										<center>
+											<font size="1">
+											ECONOMIC AND SOCIAL COUNCILS
+											</font>
+										</center>
+									</li>
+									<li>
+										<a href="ecosoc1.html">WHO (2020)</a>
+									</li>
+									<li>
+										<a href="ecosoc2.html">UNODC</a>
+									</li>
+									<li class="divider">
+									</li>
+									<li>
+										<center>
+											<font size="1">
+											CRISIS COMMITTEES
+											</font>
+										</center>
+									</li>
+									<li>
+										<a href="crisis1.html">Crisis 1</a>
+									</li>
+									<li>
+										<a href="jcc1.html">Lucchese Family</a>
+									</li>
+									<li>
+										<a href="jcc2.html">Gambino Family</a>
+									</li>
+									<li class="divider">
+									</li>
+									<li>
+										<a href="#">Suggest a committee!</a>
+									</li>
+								</ul>
+							</li>
 						</li>
 						<li>
 							<a href="information.html">INFORMATION</a>
@@ -101,9 +142,10 @@
 	</nav>
 </div> <!-- navbar end -->
 <div class="container"> 
-	<div class="col-xs-3"></div>
-	<div class="col-xs-6">
+	<div class="col-xs-1"></div>
+	<div class="col-xs-11">
 		<center>
+			<br>
 			DMUN III Committees
 			<br>
 			<br>
@@ -111,44 +153,52 @@
 		<table class="table">
 		    <tbody>
 		        <tr>
-		        	<td><a href="#">DISEC</a></td>
+		        	<td><a href="disec.html">DISEC</a></td>
 		            <td>Calder McHugh</td>
 		            <td>Molly Shapiro and Josie Shapiro</td>
-		        </tr>
+		            <td><b>Topics:</b> Protection of Civilians in Modern Warfare, Technology Developments in the Context of International Security</td>
+				</tr>
 		        <tr>
-		        	<td><a href="#">SPECPOL</a></td>
+		        	<td><a href="specpol.html">SPECPOL</a></td>
 		            <td>Sunaina Montana</td>
 		            <td>Seneca Meeks and Julien Loo</td>
-		        </tr>
+		            <td><b>Topics:</b> Turkish-Greek relations with regards to Cyprus, The Durand Line </td>
+			    </tr>
 		        <tr>
-		        	<td><a href="#">SOCHUM</a></td>
+		        	<td><a href="sochum.html">SOCHUM</a></td>
 					<td>Audrey McDermott</td>
 		            <td>Alexandra Milich</td>
+		            <td><b>Topics:</b> Right to Privacy, Child Soldiers</td>
 		        </tr>
 		        <tr>
-		        	<td><a href="#">ECOSOC 1</a></td>
+		        	<td><a href="ecosoc.html">WHO (2020)</a></td>
 					<td>Angie Cui</td>
 		            <td>Aryav Pal</td>
+		            <td><b>Topics:</b> Ebola, Biological Warfare </td>
 		        </tr>
 		        <tr>
-		        	<td><a href="#">ECOSOC 2</a></td>
+		        	<td><a href="ecosoc2.html">UNODC</a></td>
 					<td>Hannah State</td>
 		            <td>Veronica Stewart-Frommer</td>
+		            <td><b>Topics:</b> Human Trafficking, Criminal Justice Reform</td>
 		        </tr>
 		        <tr>
-		        	<td><a href="#">Crisis 1</a></td>
+		        	<td><a href="crisis1.html">Crisis 1</a></td>
 					<td>Andrew Milich and Philip Clark</td>
 		            <td>Max Lehman-Ludwig</td>
+		            <td><b>Topics:</b> </td>
 		        </tr>
 		        <tr>
-		        	<td><a href="#">JCC 1</a></td>
+		        	<td><a href="jcc1.html">“The Commission”</a></td>
 					<td>Wolf Hertzberg</td>
 		            <td>Robert Freitag</td>
+		            <td>Lucchese Family: “Lucky” Luciano’s Faction</td>
 		        </tr>
 		        <tr>
-		        	<td><a href="#">JCC 2</a></td>
+		        	<td><a href="jcc2.html">“The Commission”</a></td>
 					<td>Devin Plumb</td>
 		            <td>Alex Kaplan</td>
+		            <td>Gambino Family: “The Executionar” Mangano’s Faction</td>
 		        </tr>
 		    </tbody>
 		</table>
