--- a/history.html
+++ b/history.html
@@ -32,7 +32,7 @@
 	<script type="text/javascript" src="js/scripts.js"></script>
 </head>
 
-<font FACE="tahoma"> 
+<font FACE="palatino"> 
 
 <body>
 
@@ -62,26 +62,67 @@
 						<li class="dropdown">
 							<a href="committees.html" class="dropdown-toggle" data-toggle="dropdown">COMMITTEES<strong class="caret"></strong></a>
 							<ul class="dropdown-menu">
-								<li>
-									<a href="committees.html">Committees</a>
-								</li>
-								<li class="divider">
-								</li>
-								<li>
-									<a href="#">DISEC</a>
-								</li>
-								<li>
-									<a href="#">SPECPOL</a>
-								</li>
-								<li>
-									<a href="#">SOCHUM</a>
-								</li>
-								<li class="divider">
-								</li>
-								<li>
-									<a href="#">Suggest a committee!</a>
-								</li>
-							</ul>
+									<li>
+										<a href="committees.html">Committees</a>
+									</li>
+									<li class="divider">
+									</li>
+									<li>
+										<center>
+											<font size="1">
+											GENERAL ASSEMBLIES
+											</font>
+										</center>
+									</li>
+									<br>
+									<li>
+										<a href="disec.html">DISEC</a>
+									</li>
+									<li>
+										<a href="specpol.html">SPECPOL</a>
+									</li>
+									<li>
+										<a href="sochum.html">SOCHUM</a>
+									</li>
+									<li class="divider">
+									</li>
+									<li>
+										<center>
+											<font size="1">
+											ECONOMIC AND SOCIAL COUNCILS
+											</font>
+										</center>
+									</li>
+									<li>
+										<a href="ecosoc1.html">WHO (2020)</a>
+									</li>
+									<li>
+										<a href="ecosoc2.html">UNODC</a>
+									</li>
+									<li class="divider">
+									</li>
+									<li>
+										<center>
+											<font size="1">
+											CRISIS COMMITTEES
+											</font>
+										</center>
+									</li>
+									<li>
+										<a href="crisis1.html">Crisis 1</a>
+									</li>
+									<li>
+										<a href="jcc1.html">Lucchese Family</a>
+									</li>
+									<li>
+										<a href="jcc2.html">Gambino Family</a>
+									</li>
+									<li class="divider">
+									</li>
+									<li>
+										<a href="#">Suggest a committee!</a>
+									</li>
+								</ul>
 						</li>
 						<li>
 							<a href="information.html">INFORMATION</a>
@@ -101,7 +142,8 @@
 </div> <!-- navbar end -->
 
 <div class="container"> 
-	
+	<br>
+
 </div> <!-- container end -->
 <div class="row clearfix">
 		<div class="row clearfix">
