--- a/committees.html
+++ b/committees.html
@@ -109,7 +109,7 @@
 										</center>
 									</li>
 									<li>
-										<a href="crisis1.html">Crisis 1</a>
+										<a href="crisis1.html">HSC 1946</a>
 									</li>
 									<li>
 										<a href="jcc1.html">Lucchese Family</a>
@@ -171,7 +171,7 @@
 		            <td><b>Topics:</b> Right to Privacy, Child Soldiers</td>
 		        </tr>
 		        <tr>
-		        	<td><a href="ecosoc.html">WHO (2020)</a></td>
+		        	<td><a href="ecosoc1.html">WHO (2020)</a></td>
 					<td>Angie Cui</td>
 		            <td>Aryav Pal</td>
 		            <td><b>Topics:</b> Ebola, Biological Warfare </td>
@@ -183,10 +183,10 @@
 		            <td><b>Topics:</b> Human Trafficking, Criminal Justice Reform</td>
 		        </tr>
 		        <tr>
-		        	<td><a href="crisis1.html">Crisis 1</a></td>
+		        	<td><a href="crisis1.html">Historical Security Council: 1946</a></td>
 					<td>Andrew Milich and Philip Clark</td>
 		            <td>Max Lehman-Ludwig</td>
-		            <td><b>Topics:</b> </td>
+		            <td>The First Session </td>
 		        </tr>
 		        <tr>
 		        	<td><a href="jcc1.html">“The Commission”</a></td>
