--- a/information.html
+++ b/information.html
@@ -108,7 +108,7 @@
 										</center>
 									</li>
 									<li>
-										<a href="crisis1.html">Crisis 1</a>
+										<a href="crisis1.html">HSC 1946</a>
 									</li>
 									<li>
 										<a href="jcc1.html">Lucchese Family</a>
@@ -141,9 +141,19 @@
 </div> <!-- navbar end -->
 <br><br>
 <div class="container"> 
+	<h2>Logistics</h2>
+    <p>
+    <b>Registration:</b> 8:30am-9:15am<br/>
+    <b>Opening Ceremonies:</b> 9:20am-10:00am<br/>
+    <b>Committee Session I:</b> 10:05am-12:30pm<br/>
+    <b>Lunch (staggered):</b> 12:30pm-2:00pm<br/>
+    <b>Committee Session II:</b> 2:00pm-5:30pm<br/>
+    <b>Closing Ceremonies:</b> 5:45pm-6:15pm<br/>
+    <br>
+    <h2>Directions</h2>
 	<div class="row clearfix">
 				<div class="col-md-7 column">
-					<iframe src="https://mapsengine.google.com/map/u/0/embed?mid=zfShBU0HJf9U.k5Y568ViI0cI" width="650" height="480"></iframe>
+					<iframe src="https://mapsengine.google.com/map/u/0/embed?mid=zfShBU0HJf9U.k5Y568ViI0cI" width="600" height="480"></iframe>
 				</div>
 				<center>Directions: </center>
 				<br>
