--- a/crisis1.html
+++ b/crisis1.html
@@ -109,7 +109,7 @@
 										</center>
 									</li>
 									<li class="active">
-										<a href="crisis1.html">Crisis 1</a>
+										<a href="crisis1.html">HSC 1946</a>
 									</li>
 									<li>
 										<a href="jcc1.html">Lucchese Family</a>
