Renamed committees; new image

--- a/committees.html
+++ b/committees.html
@@ -109,7 +109,7 @@
 										</center>
 									</li>
 									<li>
-										<a href="crisis1.html">HSC 1946</a>
+										<a href="crisis1.html">ISIL</a>
 									</li>
 									<li>
 										<a href="jcc1.html">Lucchese Family</a>
@@ -160,9 +160,9 @@
 				</tr>
 		        <tr>
 		        	<td><a href="specpol.html">SPECPOL</a></td>
-		            <td>Sunaina Montana</td>
+		            <td>Sunaina Danziger</td>
 		            <td>Seneca Meeks and Julien Loo</td>
-		            <td><b>Topics:</b> Turkish-Greek relations with regards to Cyprus, The Durand Line </td>
+		            <td><b>Topics:</b> Failed States and Ungoverned Territories </td>
 			    </tr>
 		        <tr>
 		        	<td><a href="sochum.html">SOCHUM</a></td>
@@ -183,10 +183,12 @@
 		            <td><b>Topics:</b> Human Trafficking, Criminal Justice Reform</td>
 		        </tr>
 		        <tr>
-		        	<td><a href="crisis1.html">Historical Security Council: 1946</a></td>
-					<td>Andrew Milich and Philip Clark</td>
+		        	<td><a href="crisis1.html">The Islamic State of Syria and the Levant</a>
+		        		<i>الدولة الإسلامية في العراق والشام</i>
+		        	</td>
+					<td>Secretaries General: Andrew Milich and Philip Clark</td>
 		            <td>Max Lehman-Ludwig</td>
-		            <td>The First Session </td>
+		            <td> The caliphate of the 21st century</td>
 		        </tr>
 		        <tr>
 		        	<td><a href="jcc1.html">“The Commission”</a></td>
