--- a/history.html
+++ b/history.html
@@ -109,7 +109,7 @@
 										</center>
 									</li>
 									<li>
-										<a href="crisis1.html">HSC 1946</a>
+										<a href="crisis1.html">ISIL</a>
 									</li>
 									<li>
 										<a href="jcc1.html">Lucchese Family</a>
@@ -143,7 +143,57 @@
 
 <div class="container"> 
 	<br>
-
+	<center> 
+	<b>
+	DMUN AWARDS
+	</b>
+	<br> <br>
+	<b>HMUN 2015: </b> 
+	Best Large Delegation <br>
+	<br> <br>
+	<b>PMUNC 2014: </b> 
+	Best Large Delegation <br>
+	<br> <br>
+	<b>HoMMUNC 2014: </b> 
+	Best Large Delegation <br>
+	<br> <br>
+	<b>HMUN 2014: </b> 
+	Best Large Delegation <br>
+	<br> <br>
+	<b>RUMUN 2013: </b> 
+	Best Medium School <br>
+	<br> <br>
+	<b>HoMMUNC 2013:</b>  
+	Best Large Delegation <br>
+	<br> <br>
+	<b>CMUNC 2013: </b> 
+	Outstanding Large Delegation <br>
+	<br> <br>
+	<b>NAIMUN 2013: </b> 
+	Best Large Delegation <br>
+	<br> <br>
+	<b>HMUN 2013: </b> 
+	Best Large Delegation <br>
+	<br> <br>
+	<b>PMUNC 2012: </b> 
+	Outstanding Large Delegation <br>
+	<br> <br>
+	<b>HoMMUNC 2012: </b> 
+	Best Large Delegation <br>
+	<br> <br>
+	<b>BMUN 2012: </b> 
+	Best Club <br>
+	<br> <br>
+	<b>PMUNC 2011: </b> 
+	Outstanding Large Delegation <br>
+	<br> <br>
+	<b>RUMUN 2011: </b> 
+	Best Large Delegation <br>
+	<br> <br>
+	<b>HoMMUNC 2011: </b> 
+	Best Large Delegation <br>
+	<br> <br>
+	</center>
 </div> <!-- container end -->
 <div class="row clearfix">
 		<div class="row clearfix">
