--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head onload="if( /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ) {
+ window.location.replace("http://quantum.dalton.org/mobile.html");}">
   <meta charset="utf-8">
   <title>DMUN III!</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -109,7 +110,7 @@
 										</center>
 									</li>
 									<li>
-										<a href="crisis1.html">HSC 1946</a>
+										<a href="crisis1.html">ISIL</a>
 									</li>
 									<li>
 										<a href="jcc1.html">Lucchese Family</a>
