--- a/information.html
+++ b/information.html
@@ -108,7 +108,7 @@
 										</center>
 									</li>
 									<li>
-										<a href="crisis1.html">HSC 1946</a>
+										<a href="crisis1.html">ISIL</a>
 									</li>
 									<li>
 										<a href="jcc1.html">Lucchese Family</a>
@@ -141,6 +141,13 @@
 </div> <!-- navbar end -->
 <br><br>
 <div class="container"> 
+	<h2>Conference Pricing</h2>
+	The conference will cost $100 per delegation in addition to $40 per delegate.
+	<br>
+	We will give a 25% discount per delegate to teams of 20 people or more.
+	<br>
+	If your school ends up bringing fewer than 20 delegates, we will charge you the 25%.
+
 	<h2>Logistics</h2>
     <p>
     <b>Registration:</b> 8:30am-9:15am<br/>
