--- a/specpol.html
+++ b/specpol.html
@@ -63,7 +63,7 @@
 							<li class="active">
 								<a href="committees.html" class="dropdown-toggle" data-toggle="dropdown">COMMITTEES<strong class="caret"></strong></a>
 								<ul class="dropdown-menu">
-									<li class="active">
+									<li>
 										<a href="committees.html">Committees</a>
 									</li>
 									<li class="divider">
@@ -110,7 +110,7 @@
 										</center>
 									</li>
 									<li>
-										<a href="crisis1.html">HSC 1946</a>
+										<a href="crisis1.html">ISIL</a>
 									</li>
 									<li>
 										<a href="jcc1.html">Lucchese Family</a>
