--- a/jcc1.html
+++ b/jcc1.html
@@ -110,7 +110,7 @@
 										</center>
 									</li>
 									<li>
-										<a href="crisis1.html">HSC 1946</a>
+										<a href="crisis1.html">ISIL</a>
 									</li>
 									<li class="active">
 										<a href="jcc1.html">Lucchese Family</a>
