Added bgs; updated names.

--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@
 										<a href="crisis1.html">ISIL</a>
 									</li>
 									<li>
-										<a href="jcc1.html">Lucchese Family</a>
+										<a href="jcc1.html">Luciano Family</a>
 									</li>
 									<li>
-										<a href="jcc2.html">Gambino Family</a>
+										<a href="jcc2.html">Mangano Family</a>
 									</li>
 									<li class="divider">
 									</li>
@@ -246,6 +246,7 @@
 				<ul>
   					<li><i>November 3rd: </i>Committee Topics Posted! </li>
   					<li><i>November 4th: </i>Registration is Open! </li>
+  					<li><i>March 26th: </i>Background Guides Up! </li>
 				</ul>
 			</div>
 			<div class="col-xs-3">
