--- a/register.html
+++ b/register.html
@@ -113,10 +113,10 @@
 										<a href="crisis1.html">ISIL</a>
 									</li>
 									<li>
-										<a href="jcc1.html">Lucchese Family</a>
+										<a href="jcc1.html">Luciano Family</a>
 									</li>
 									<li>
-										<a href="jcc2.html">Gambino Family</a>
+										<a href="jcc2.html">Mangano Family</a>
 									</li>
 									<li class="divider">
 									</li>
