--- a/committees.html
+++ b/committees.html
@@ -112,10 +112,10 @@
 										<a href="crisis1.html">ISIL</a>
 									</li>
 									<li>
-										<a href="jcc1.html">Lucchese Family</a>
+										<a href="jcc1.html">Luciano Family</a>
 									</li>
 									<li>
-										<a href="jcc2.html">Gambino Family</a>
+										<a href="jcc2.html">Mangano Family</a>
 									</li>
 									<li class="divider">
 									</li>
@@ -155,14 +155,14 @@
 		        <tr>
 		        	<td><a href="disec.html">DISEC</a></td>
 		            <td>Calder McHugh</td>
-		            <td>Molly Shapiro and Josie Shapiro</td>
+		            <td>Molly Shapiro</td>
 		            <td><b>Topics:</b> Protection of Civilians in Modern Warfare, Technology Developments in the Context of International Security</td>
 				</tr>
 		        <tr>
 		        	<td><a href="specpol.html">SPECPOL</a></td>
 		            <td>Sunaina Danziger</td>
 		            <td>Seneca Meeks and Julien Loo</td>
-		            <td><b>Topics:</b> Failed States and Ungoverned Territories </td>
+		            <td><b>Topics:</b> State Failure </td>
 			    </tr>
 		        <tr>
 		        	<td><a href="sochum.html">SOCHUM</a></td>
@@ -173,7 +173,7 @@
 		        <tr>
 		        	<td><a href="ecosoc1.html">WHO (2020)</a></td>
 					<td>Angie Cui</td>
-		            <td>Aryav Pal</td>
+		            <td>Josie Shapiro</td>
 		            <td><b>Topics:</b> Ebola, Biological Warfare </td>
 		        </tr>
 		        <tr>
@@ -186,21 +186,21 @@
 		        	<td><a href="crisis1.html">The Islamic State of Syria and the Levant</a>
 		        		<i>الدولة الإسلامية في العراق والشام</i>
 		        	</td>
-					<td>Secretaries General: Andrew Milich and Philip Clark</td>
-		            <td>Max Lehman-Ludwig</td>
+					<td> Philip Clark</td>
+		            <td> Alex Kaplan and Robert Freitag </td>
 		            <td> The caliphate of the 21st century</td>
 		        </tr>
 		        <tr>
-		        	<td><a href="jcc1.html">“The Commission”</a></td>
+		        	<td><a href="jcc1.html">New York Mafia</a></td>
 					<td>Wolf Hertzberg</td>
-		            <td>Robert Freitag</td>
-		            <td>Lucchese Family: “Lucky” Luciano’s Faction</td>
+		            <td>Aryav Pal</td>
+		            <td>Luciano Family: “Lucky” Luciano’s Faction</td>
 		        </tr>
 		        <tr>
-		        	<td><a href="jcc2.html">“The Commission”</a></td>
+		        	<td><a href="jcc2.html">New York Mafia</a></td>
 					<td>Devin Plumb</td>
-		            <td>Alex Kaplan</td>
-		            <td>Gambino Family: “The Executionar” Mangano’s Faction</td>
+		            <td>Michael Landes</td>
+		            <td>Mangano Family: “The Executioner” Mangano’s Faction</td>
 		        </tr>
 		    </tbody>
 		</table>
