Updated website with closed registration.

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 						WELCOME TO DMUN 2015!
 					<br>
 					<br> 
-						<a href="register.html">Register Now!</a>
+						<a href="#">Registraion for DMUN III is closed.<a>
 					<br>
 					<br>
 					</b>
@@ -251,7 +251,7 @@
 			</div>
 			<div class="col-xs-3">
 				<br>
-				<button type="button" class="btn btn-default btn-lg"><a href="register.html">Register Now!</a></button>
+				<button type="button" class="btn btn-default btn-lg"><a href="#">Registration is closed.</a></button>
 			</div>
 		<br><br>
 		<br><br>
