--- a/register.html
+++ b/register.html
@@ -146,7 +146,8 @@
 	<!-- register stuff -->
 	<br>
 	<center>
-	<iframe src="https://docs.google.com/forms/d/1QMMEMqpRelhMULY2f54P1_4WQXFH9xF3u61c00xUs00/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+	Unfortunately, registration for DMUN III is closed. 
+	<!--<iframe src="https://docs.google.com/forms/d/1QMMEMqpRelhMULY2f54P1_4WQXFH9xF3u61c00xUs00/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>-->
 	<br><br>
 	</center>
 	Please contact <a href="mailto:dg@daltonmun.org"> dg@daltonmun.org</a> or <a href="mailto:sg@daltonmun.org"> sg@daltonmun.org</a> with any inquiries or concerns. 
