Updated site basics for DMUN IV

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head onload="if( /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ) {
  window.location.replace("http://quantum.dalton.org/mobile.html");}">
   <meta charset="utf-8">
-  <title>DMUN III!</title>
+  <title>DMUN IV!</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
   <meta name="author" content="">
@@ -46,13 +46,15 @@
     </i>
 </div>
 <br><br><br>
+<div class="alert alert-danger">
+  <strong>Please note: </strong> Registration for DMUN IV has not yet opened. 
+</div>
 <div class="navbar-default"> <!-- navbar start -->
   	<nav class="navbar" role="navigation">
-				
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav">
 						<li class="active">
-							<a href="index.html">DMUN III</a>
+							<a href="index.html">DMUN IV</a>
 						</li>
 						<li>
 							<a href="about.html">ABOUT US</a>
@@ -195,10 +197,10 @@
 			<left>
 				<font size="4">
 					<b>
-						WELCOME TO DMUN 2015!
+						WELCOME TO DMUN IV!
 					<br>
 					<br> 
-						<a href="#">Registraion for DMUN III is closed.<a>
+						<a href="#">Information regarding DMUN IV will be released in the coming months.<a>
 					<br>
 					<br>
 					</b>
@@ -216,7 +218,7 @@
 				Dear Delegates, </b>
 				<br>
 				<br>
-				Welcome to DMUN III! The entire Dalton Model United Nations Team would like to invite you to our third high school Model United Nations Conference on April 25th. 
+				Welcome to the DMUN website! The entire Dalton Model United Nations Team would like to invite you to our fourth high school Model United Nations Conference in April, 2016. 
 				<br>
 				<br>
 				Sincerely, 
@@ -229,7 +231,7 @@
 			</left>
 		</div>
 		<div class="col-xs-3">
-			&nbsp&nbsp&nbsp&nbsp&nbsp Countdown to DMUN! 
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Countdown to DMUN! 
 			<iframe width="320" height="160" src="https://w2.countingdownto.com/676806" frameborder="no" scrolling="no" border="0" style="-webkit-transform:scale(0.9);"></iframe>
 			<!--<iframe width="100" height="100" src="https://w2.countingdownto.com/676806" frameborder="0"></iframe><p> -->
 		</div>
@@ -244,9 +246,7 @@
 			<div class="col-xs-7">
 				<b>Latest News: </b>
 				<ul>
-  					<li><i>November 3rd: </i>Committee Topics Posted! </li>
-  					<li><i>November 4th: </i>Registration is Open! </li>
-  					<li><i>March 26th: </i>Background Guides Up! </li>
+  					<li><i>June, 2015: </i>New DMUN staff preparing for next year!</li>
 				</ul>
 			</div>
 			<div class="col-xs-3">
