--- a/leadership.html
+++ b/leadership.html
@@ -8,7 +8,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>DMUN III!</title>
+  <title>DMUN IV!</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
   <meta name="author" content="">
@@ -57,7 +57,7 @@
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav">
 						<li>
-							<a href="index.html">DMUN III</a>
+							<a href="index.html">DMUN IV</a>
 						</li>
 						<li>
 							<a href="about.html">ABOUT US</a>
