--- a/register.html
+++ b/register.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>DMUN III!</title>
+  <title>DMUN IV!</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
   <meta name="author" content="">
@@ -52,7 +52,7 @@
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav">
 						<li>
-							<a href="index.html">DMUN III</a>
+							<a href="index.html">DMUN IV</a>
 						</li>
 						<li>
 							<a href="about.html">ABOUT US</a>
@@ -146,7 +146,7 @@
 	<!-- register stuff -->
 	<br>
 	<center>
-	Unfortunately, registration for DMUN III is closed. 
+	Registration for DMUN IV has not yet begun. 
 	<!--<iframe src="https://docs.google.com/forms/d/1QMMEMqpRelhMULY2f54P1_4WQXFH9xF3u61c00xUs00/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>-->
 	<br><br>
 	</center>
