New countdown timer, cleaned up page

--- a/index.html
+++ b/index.html
@@ -2,33 +2,19 @@
 <html lang="en">
 <head onload="if( /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ) {
  window.location.replace("http://quantum.dalton.org/mobile.html");}">
-  <meta charset="utf-8">
-  <title>DMUN IV!</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="">
-  <meta name="author" content="">
-
-
-	<!--link rel="stylesheet/less" href="less/bootstrap.less" type="text/css" /-->
-	<!--link rel="stylesheet/less" href="less/responsive.less" type="text/css" /-->
-	<!--script src="js/less-1.3.3.min.js"></script-->
-	<!--append ‘#!watch’ to the browser URL, then refresh the page. -->
-	
+	<meta charset="utf-8">
+	<title>DMUN IV!</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="">
+	<meta name="author" content="">
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet">
-
-  <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
-  <!--[if lt IE 9]>
-    <script src="js/html5shiv.js"></script>
-  <![endif]-->
-
-  <!-- Fav and touch icons -->
-  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="img/apple-touch-icon-144-precomposed.png">
-  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="img/apple-touch-icon-114-precomposed.png">
-  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="img/apple-touch-icon-72-precomposed.png">
-  <link rel="apple-touch-icon-precomposed" href="img/apple-touch-icon-57-precomposed.png">
-  <link rel="shortcut icon" href="img/favicon.ico">
-  
+	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="img/apple-touch-icon-144-precomposed.png">
+	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="img/apple-touch-icon-114-precomposed.png">
+	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="img/apple-touch-icon-72-precomposed.png">
+	<link rel="apple-touch-icon-precomposed" href="img/apple-touch-icon-57-precomposed.png">
+	<link rel="shortcut icon" href="img/favicon.ico">
+	  
 	<script type="text/javascript" src="js/jquery.min.js"></script>
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="js/scripts.js"></script>
@@ -230,10 +216,15 @@
 			</i>
 			</left>
 		</div>
+		<script type="text/javascript">if(!window.console)console = {log: function(){}};</script>
+		<style>#demo{z-index: 999;}</style>
+		<div id="countdown_widget_style_holder">
+		
+		<style type="text/css">html,body{margin:0px;padding:0px}#cdt a img{border:0}#cdt .demo{position:absolute;right:0;top:0}#cdt #ie-fix{display:none}#cdt .digit{background-repeat:		no-repeat;width:34px}#cdt .sml-digit{width:15px}#cdt .digit-0{background-position:-302px -64px}#cdt .sml-digit-0{background-position:-300px -124px}#cdt .digit-1{background-		position:-336px -64px}#cdt .sml-digit-1{background-position:-315px -124px}#cdt .digit-2{background-position:-371px -64px}#cdt .sml-digit-2{background-position:-331px -124px		}#cdt .digit-3{background-position:-405px -64px}#cdt .sml-digit-3{background-position:-346px -124px}#cdt .digit-4{background-position:-439px -64px}#cdt .sml-digit-4{		background-position:-362px -124px}#cdt .digit-5{background-position:-473px -64px}#cdt .sml-digit-5{background-position:-377px -124px}#cdt .digit-6{background-position:-508		px -64px}#cdt .sml-digit-6{background-position:-393px -124px}#cdt .digit-7{background-position:-542px -64px}#cdt .sml-digit-7{background-position:-408px -124px}#cdt .		digit-8{background-position:-576px -64px}#cdt .sml-digit-8{background-position:-423px -124px}#cdt .digit-9{background-position:-611px -64px}#cdt .sml-digit-9{background-		position:-439px -124px}#cdt .sml-digit-x{width:17px;background-position:-470px -124px}#cdt .sml-digit-p{width:9px;background-position:-458px -124px}#cdt .spr.sml-digit-b{		width:9px;background-image:none;visibility:hidden}#cdt.widget-wrapper{width:300px;height:206px;position:relative;margin:auto}#cdt .content-wrapper{width:100%;height:100%}#		cdt .spr{background-image:url(https://d29am0ph5s0t8u.cloudfront.net/production/cdt/widgets/sprites/image/974733/oc-sprite.png?version=55d691fb-5)}@media only screen and (-		webkit-min-device-pixel-ratio: 1.5), only screen and (min-device-pixel-ratio: 1.5){#cdt .spr{background-image:url(https://d29am0ph5s0t8u.cloudfront.net/production/cdt/		widgets/sprites/retina_image/974733/oc-sprite.png?version=55d691fb-5);background-size:686px 206px}}#cdt .counter-wrapper{width:266px;height:103.0px;padding:0 15px;overflow:		hidden}#cdt .counter-wrapper .counter-item{height:53px;float:left}#cdt .counter-wrapper .counter-item.sml-digit{height:26px}#cdt .counter-wrapper .counter-group{height:60px		;float:left;position:relative;overflow:visible}#cdt .counter-wrapper .counter-group.sml-counter-group{height:39px}#cdt .counter-group .unit-label{position:absolute;height:		13px;width:51px;left:-10px;top:25px}#cdt .days{width:270px;height:50px}#cdt .counter-group.days .unit-label{position:relative;left:3px;float:left;background-position:-643px		 -64px;width:41px;height:26px;top:0}#cdt .hours .unit-label{background-position:-300px -149px}#cdt .minutes .unit-label{background-position:-351px -149px}#cdt .seconds .		unit-label{background-position:-403px -149px}#cdt .header{height:64px;width:100%}
+		</style>
+		</div>
 		<div class="col-xs-3">
-			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Countdown to DMUN! 
-			<iframe width="320" height="160" src="https://w2.countingdownto.com/676806" frameborder="no" scrolling="no" border="0" style="-webkit-transform:scale(0.9);"></iframe>
-			<!--<iframe width="100" height="100" src="https://w2.countingdownto.com/676806" frameborder="0"></iframe><p> -->
+			<iframe width="350" height="200" src="https://w2.countingdownto.com/974734" frameborder="0">
 		</div>
 	</div>
 </div> <!-- container end -->
