--- a/leadership.html
+++ b/leadership.html
@@ -162,38 +162,49 @@
 		<b>Secretaries-General</b>
 	</i>
 	<br><br>
-		Philip Clark and Andrew Milich
+		Devin Plumb and John Hertzberg 
 	<br><br>
 	<i>
 		<b>Senior Executive Board</b>
 	</i>
 	<br><br>
-		Sunaina Danziger (Director of Operations and Research)<br> 
-		Beatrice Edmonds (Director General)<br>
-		Calder McHugh (Director of Delegate Management) <br>
-		Jordan Singer (Director General)
+		Audrey McDermott (Director General of <i>DMUN IV</i>)<br> 
+		Hannah State (Director General of <i>DMUN IV</i>)<br>
+		Angie Cui
 	<br><br>
 	<i> 
-		<b>Under Secretaries-General</b>
+		<b>Under Secretaries-General and Under Directors-General</b>
 	</i>
 	<br><br>
-		Angie Cui <br> 
-		Wolf Hertzberg <br> 
-		Audrey McDermott <br> 
-		Devin Plumb <br> 
-		Hannah State 
+		Robert Freitag <br>
+		Veronica Stewart-Frommer <br>
+		Alexandra Milich <br>
+		Molly Shapiro <br>
+		Josie Shapiro <br>
+		Alex Kaplan 
 	<br><br>
 	<i>
-		<b>Director of Alumni Relations</b>
+		<b>Directors of Alumni Relations</b>
 	</i>
 	<br><br>
 		Samuel Stone
+		Andrew Milich
 	<br><br>
 	<i>
 		<b>Website Director</b>
 	</i>
 	<br><br>
-		Andrew Milich
+		<i>Currently on sabaticle</i>
+	<br><br>
+	<i> 
+		<b>Former Secretaries-General</b>
+	</i>
+	<br><br>
+		Andrew Milich and Philip Clark 
+		<br>
+		Eric Helfgott and Grace Monk
+		<br>
+		Anatol Klass and Daniel Judt 
 	<br><br>
 	</center>
 	</div>
