Misspelling and minor addition

--- a/leadership.html
+++ b/leadership.html
@@ -187,14 +187,14 @@
 		<b>Directors of Alumni Relations</b>
 	</i>
 	<br><br>
-		Samuel Stone
-		Andrew Milich
+		Samuel Stone <br>
+		Andrew Milich <i>(in training)</i>
 	<br><br>
 	<i>
 		<b>Website Director</b>
 	</i>
 	<br><br>
-		<i>Currently on sabaticle</i>
+		<i>Currently on sabbatical</i>
 	<br><br>
 	<i> 
 		<b>Former Secretaries-General</b>
