Removed old bgs

--- a/committees.html
+++ b/committees.html
@@ -146,7 +146,7 @@
 	<div class="col-xs-11">
 		<center>
 			<br>
-			DMUN III Committees
+			DMUN IV Committees - <i> not yet available </i>
 			<br>
 			<br>
 		</center>
